# algorithmic-problems

./: .gitignore  CMakeLists.txt  main.cpp
1_two_sum/: CMakeLists.txt
1_two_sum/include/: two_sum.hpp
1_two_sum/include/1_two_sum/: two_sum.hpp
1_two_sum/source/: two_sum.cpp
source/quicksort/: CMakeLists.txt
source/quicksort/include/quicksort/: quicksort.hpp
source/quicksort/source/: quicksort.cpp
src/1_two_sum/: CMakeLists.txt
src/1_two_sum/include/1_two_sum/: two_sum.hpp
src/1_two_sum/source/: two_sum.cpp
src/2_max_consecutive_ones/: CMakeLists.txt
src/2_max_consecutive_ones/include/2_max_consecutive_ones/: max_consecutive_ones.hpp
src/2_max_consecutive_ones/source/: max_consecutive_ones.cpp
src/unique_list/: CMakeLists.txt
src/unique_list/include/unique_list/: unique_list.hpp
src/unique_list/source/: unique_list.cpp
src/utils/exception/: CMakeLists.txt
src/utils/exception/include/utils/: ads_exception.hpp
tests/: CMakeLists.txt  test_2_max_consecutive_ones.cpp  test_quicksort.cpp  test_temperature_reading.cpp  test_two_sum.cpp  test_unique_list.cpp
